# vcpkg-gtest-demo

./: .gitignore  CMakeLists.txt  README.md
include/: my_code.h
src/: my_code.cpp
tests/: test_main.cpp
